--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,11 +85,83 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
+      - name: Install OpenCV dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential cmake pkg-config
+          sudo apt-get install -y libjpeg-dev libtiff-dev libjasper-dev libpng-dev
+          sudo apt-get install -y libavcodec-dev libavformat-dev libswscale-dev libv4l-dev
+          sudo apt-get install -y libxvidcore-dev libx264-dev
+          sudo apt-get install -y libgtk-3-dev
+          sudo apt-get install -y libatlas-base-dev gfortran
+          sudo apt-get install -y python3-dev python3-numpy
+
+      - name: Install OpenCV
+        run: |
+          wget -q https://github.com/opencv/opencv/archive/${OPENCV_VERSION}.zip
+          unzip -q ${OPENCV_VERSION}.zip
+          rm ${OPENCV_VERSION}.zip
+          cd opencv-${OPENCV_VERSION}
+          mkdir build
+          cd build
+          cmake -D CMAKE_BUILD_TYPE=RELEASE \
+            -D CMAKE_INSTALL_PREFIX=/usr/local \
+            -D INSTALL_PYTHON_EXAMPLES=OFF \
+            -D INSTALL_C_EXAMPLES=OFF \
+            -D OPENCV_ENABLE_NONFREE=ON \
+            -D OPENCV_GENERATE_PKGCONFIG=ON \
+            -D BUILD_EXAMPLES=OFF ..
+          make -j4
+          sudo make install
+          sudo ldconfig
+
+      - name: Install gocv
+        run: |
+          go get -u -d gocv.io/x/gocv
+          cd $GOPATH/pkg/mod/gocv.io/x/gocv@*
+          make install
+
+      - name: Install dependencies
+        run: |
+          go mod download
+          go install gopkg.in/yaml.v3@latest
+
       - name: Install golangci-lint
-        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.55.2
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+
+      - name: Create .golangci.yml
+        run: |
+          cat > .golangci.yml << EOF
+          run:
+            go: '1.21'
+            timeout: 5m
+            skip-dirs:
+              - vendor
+              - third_party
+            skip-files:
+              - ".*_test.go"
+              - ".*_mock.go"
+          
+          linters:
+            enable:
+              - gofmt
+              - govet
+              - errcheck
+              - staticcheck
+              - gosimple
+              - ineffassign
+          
+          issues:
+            exclude-rules:
+              - path: _test\.go
+                linters:
+                  - errcheck
+          EOF
 
       - name: Run golangci-lint
-        run: golangci-lint run
+        run: golangci-lint run ./...
 
   security-scan:
     name: Security Scan
