--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential cmake pkg-config
-          sudo apt-get install -y libjpeg-dev libtiff-dev libjasper-dev libpng-dev
+          sudo apt-get install -y libjpeg-dev libtiff-dev libpng-dev
           sudo apt-get install -y libavcodec-dev libavformat-dev libswscale-dev libv4l-dev
           sudo apt-get install -y libxvidcore-dev libx264-dev
           sudo apt-get install -y libgtk-3-dev
           sudo apt-get install -y libatlas-base-dev gfortran
           sudo apt-get install -y python3-dev python3-numpy
+          sudo apt-get install -y libopencv-dev
 
       - name: Install OpenCV
         run: |
@@ -89,12 +90,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential cmake pkg-config
-          sudo apt-get install -y libjpeg-dev libtiff-dev libjasper-dev libpng-dev
+          sudo apt-get install -y libjpeg-dev libtiff-dev libpng-dev
           sudo apt-get install -y libavcodec-dev libavformat-dev libswscale-dev libv4l-dev
           sudo apt-get install -y libxvidcore-dev libx264-dev
           sudo apt-get install -y libgtk-3-dev
           sudo apt-get install -y libatlas-base-dev gfortran
           sudo apt-get install -y python3-dev python3-numpy
+          sudo apt-get install -y libopencv-dev
 
       - name: Install OpenCV
         run: |
